--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,3 +123,8 @@ body {
     background-image: url("../public/mbbg.svg");
   }
 }
+
+.card{
+  background: linear-gradient(147.75deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
+  backdrop-filter: blur(10px);
+}
