--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,6 +136,12 @@ body {
   backdrop-filter: blur(10px);
 }
 
+.modal-event-content {
+  background-image: url("../public/dtbg.svg");
+  background-size: cover;
+  background-position: center;;
+}
+
 .newsletterSubmit {
   clip-path: polygon(0 45%, 70% 45%, 70% 25%, 100% 65%, 0 65%);
 }
