--- a/styles/globals.css
+++ b/styles/globals.css
@@ -145,3 +145,22 @@ body {
 .newsletterSubmit {
   clip-path: polygon(0 45%, 70% 45%, 70% 25%, 100% 65%, 0 65%);
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(#32c4f0, #a067ab);
+}
+::-webkit-scrollbar-thumb {
+  background: #fff;
+}
+
+.event-card:hover img{
+  filter: blur(10px);
+  transition: 0.2s;
+}
+.event-card:hover div{
+  display: flex;
+}
