--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html{
+html {
   scroll-behavior: smooth;
 }
 * {
@@ -120,7 +120,7 @@ p {
 }
 
 body {
-  background-image: url("../public/dtbg.svg");
+  background-image: url("/dtbg.svg");
   background-repeat: repeat-y;
   background-size: 105%;
 }
@@ -141,7 +141,7 @@ body {
 }
 
 .modal-event-content {
-  background-image: url("../public/dtbg.svg");
+  background-image: url("/dtbg.svg");
   background-size: cover;
   background-position: center;
 }
