--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* In your global stylesheet or component stylesheet */
+
+/* In your Tailwind CSS stylesheet or directly in your HTML/JSX file */
+.custom-text {
+  width: 563px;
+  height: 135px;
+  flex-shrink: 0;
+  text-align: center;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: 'Impact', sans-serif;
+  font-size: 101px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 13.13px;
+  background: linear-gradient(180deg, #FFF 10.4%, #006871 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 * {
   padding: 0;
   margin: 0;
